Run tests without building, add node build produced by esbuild

--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "stone-soup",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/earthstar.node.cjs",
+  "exports": {
+    "require": "dist/earthstar.node.cjs",
+    "default": "dist/earthstar.node.cjs"
+  },
   "repository": "",
   "author": "Cinnamon <cinnamon_bun_github@fastmail.com>",
   "homepage": "https://github.com/cinnamon-bun/stone-soup",
   "license": "AGPL-3.0",
   "scripts": {
-    "clean": "rm -rf build coverage .nyc_output",
-    "build": "tsc",
+    "clean": "rm -rf coverage .nyc_output",
+    "build": "rm -rf dist && node ./scripts/build.mjs",
     "start": "node build/example-app.js",
-    "test": "tap --timeout=120 build/test/*.test.js",
-    "test2": "tap -Rspecy --no-bail --jobs=1 build/test/*.test.js",
-    "build-and-test": "yarn build && yarn test",
-    "watch-test": "onchange -i src/*.ts src/test/*.ts -- yarn build-and-test",
+    "test": "tap --timeout=120 --ts src/**/*.test.ts",
+    "test2": "tap -Rspecy --no-bail --jobs=1 test/*.test.ts",
+    "watch-test": "onchange -i src/*.ts src/test/*.ts -- yarn test",
     "test-coverage": "yarn test --coverage-report=lcov",
     "prepublishOnly": "yarn run clean && yarn run build",
     "depchart-types": "depchart `find src | grep '/types/' | grep .ts` --rankdir LR -o depchart/depchart-types --node_modules omit",
@@ -27,6 +30,7 @@
     "@types/node": "^14.14.39",
     "@types/tap": "^14.10.2",
     "depchart": "^1.2.0",
+    "esbuild": "^0.11.12",
     "onchange": "^7.1.0",
     "tap": "^14.11.0",
     "typescript": "^4.2.4"
