not getting promise rejections to behave as expected

--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "print-platform-support": "yarn clean && yarn build-tsc && node build/print-platform-support.js",
     "start": "node build/example-app.js",
     "browserify-tests": "mkdir -p browserify-tests && browserify build/test/universal/*.test.js build/test/browser/*.test.js build/test/browser-run-exit.js > browserify-tests/bundle.test.js",
+    "browserify-tests-lifecycle": "mkdir -p browserify-tests && browserify build/test/universal/lifecycle.test.js build/test/browser-run-exit.js > browserify-tests/bundle.test.js",
     "browser-run-tests": "cat browserify-tests/bundle.test.js | browser-run | tap-spec",
     "test.browser": "yarn clean && yarn build-tsc && yarn browserify-tests && yarn browser-run-tests",
+    "test-lifecycle.browser": "yarn clean && yarn build-tsc && yarn browserify-tests-lifecycle && yarn browser-run-tests",
     "browserify-benchmark": "mkdir -p browserify-tests && browserify build/test/browser/*.benchmark.js > browserify-tests/bundle.benchmark.js",
     "browser-run-benchmark": "cat browserify-tests/bundle.benchmark.js | browser-run",
     "benchmark.browser": "yarn clean && yarn build-tsc && mkdir -p benchmark-results && yarn browserify-benchmark && yarn browser-run-benchmark | tee benchmark-results/benchmark.browser.txt",
@@ -60,6 +62,7 @@
     "test-coverage": "yarn test --coverage-report=lcov",
     "watch-test": "onchange -i src/*.ts src/test/*.ts -- yarn clean-build-test",
     "test-crypto": "tap -Rspecy --no-bail --jobs=1 build/test/node/crypto.node.test.js",
+    "test-lifecycle": "tap -Rspecy --no-bail --jobs=1 build/test/universal/lifecycle.test.js",
     "test-lock": "tap -Rspecy --no-bail --jobs=1 build/test/universal/lock.test.js",
     "test-peer-client-server": "tap -Rspecy --no-bail --jobs=1 build/test/node/peer-client-server.node.test.js",
     "test-storage": "tap -Rspecy --no-bail --jobs=1 build/test/node/storage-async.node.test.js",
