--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "test-coverage": "yarn test --coverage-report=lcov",
     "watch-test": "onchange -i src/*.ts src/test/*.ts -- yarn clean-build-test",
     "test-crypto": "tap             -Rspecy --no-bail --jobs=1 build/test/node/crypto.node.test.js",
+    "test-gardener": "tap           -Rspecy --no-bail --jobs=1 build/test/improved/gardener.node.test.js",
     "test-lock": "tap               -Rspecy --no-bail --jobs=1 build/test/universal/lock.test.js",
     "test-peer-client-server": "tap -Rspecy --no-bail --jobs=1 build/test/node/peer-client-server.node.test.js",
     "test-query-follower": "tap     -Rspecy --no-coverage --no-bail --jobs=1 build/test/improved/query-follower.node.test.js",
@@ -84,6 +85,7 @@
   "devDependencies": {
     "@earthstar-project/mini-rpc": "^2.1.0",
     "@types/browser-or-node": "^1.3.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^14.14.43",
     "@types/tap": "^14.10.2",
     "@types/tape": "^4.13.0",
@@ -102,6 +104,7 @@
     "chalk": "^4.1.1",
     "chloride": "^2.4.1",
     "concurrency-friends": "^5.0.1",
+    "express": "^4.17.1",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
     "rfc4648": "^1.4.0",
