--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "devDependencies": {
     "@earthstar-project/mini-rpc": "^2.1.0",
+    "@types/better-sqlite3": "^7.4.2",
     "@types/browser-or-node": "^1.3.0",
     "@types/node": "^14.14.43",
     "@types/tap": "^14.10.2",
@@ -100,6 +101,7 @@
   },
   "dependencies": {
     "@noble/ed25519": "^1.3.0",
+    "better-sqlite3": "^7.4.6",
     "chalk": "^4.1.1",
     "chloride": "^2.4.1",
     "concurrency-friends": "^5.0.1",
