--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "test-query-follower": "tap     -Rspecy --no-coverage --no-bail --jobs=1 build/test/improved/query-follower.node.test.js",
     "test-storage": "tap            -Rspecy --no-bail --jobs=1 build/test/node/storage-async.node.test.js",
     "test-storage-driver": "tap     -Rspecy --no-bail --jobs=1 build/test/node/storage-driver-async.node.test.js",
+    "test-query-helpers": "tap      -Rspecy --no-bail --jobs=1 build/test/improved/query-helpers.node.test.js",
     "prepublishOnly": "yarn clean && yarn esbuild",
     "depchart-main": "mkdir     -p depchart && depchart `find src | grep .ts` --exclude src/print-platform-support.ts src/decls.d.ts src/index.ts src/index.browser.ts src/shims/*.ts src/entries/*.ts `find src | grep '/test/'` `find src | grep '/util/'` `find src | grep '/experimental/'` --rankdir LR -o depchart/depchart-main --node_modules omit",
     "depchart-no-types": "mkdir -p depchart && depchart `find src | grep .ts` --exclude src/print-platform-support.ts src/decls.d.ts src/index.ts src/index.browser.ts src/shims/*.ts src/entries/*.ts `find src | grep '/test/'` `find src | grep '/util/'` `find src | grep '/experimental/'` `find src | grep types.ts` --rankdir LR -o depchart/depchart-no-types --node_modules omit",
