--- a/.github/workflows/bundle.js.yml
+++ b/.github/workflows/bundle.js.yml
@@ -2,9 +2,9 @@ name: Bundle CI
 
 on:
   push:
-    branches: [main, esm-first]
+    branches: [main]
   pull_request:
-    branches: [main, esm-first]
+    branches: [main]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        deno-version: ["1.17.2"]
+        deno-version: ["1.18.0"]
 
     steps:
       - uses: actions/checkout@v2
